<resources>
    <string name="app_name">DoSoptTemplate</string>

    <!-- activity_login -->
    <string name="tv_login_title">Welcome to SOPT</string>
    <string name="tv_login_id_title">ID</string>
    <string name="etv_login_id">아이디를 입력해주세요</string>
    <string name="tv_login_pw_title">비밀번호</string>
    <string name="etv_login_pw">비밀번호를 입력해주세요</string>
    <string name="btn_login_navi_log_in">로그인 하기</string>
    <string name="btn_login_navi_sign_up">회원가입하기</string>

    <!-- activity_main -->
    <string name="tv_main_id_title">ID</string>
    <string name="tv_main_mbti_title">MBTI</string>

    <!-- activity_signup -->
    <string name="tv_signup_title">SIGN UP</string>
    <string name="tv_signup_id_title">ID</string>
    <string name="etv_signup_id">아이디를 입력해주세요</string>
    <string name="tv_signup_pw_title">비밀번호</string>
    <string name="etv_signup_pw">비밀번호를 입력해주세요</string>
    <string name="tv_signup_nickname">닉네임</string>
    <string name="etv_signup_nickname">닉네임을 입력해주세요</string>
    <string name="tv_signup_mbti_title">MBTI</string>
    <string name="etv_signup_mbti">MBTI를 입력해주세요</string>
    <string name="tv_signup_about_me_title">About Me</string>
    <string name="etv_signup_about_me">한줄 자기소개를 입력해주세요</string>
    <string name="btn_signup_navi_login">회원가입 하기</string>


    <!-- error_message -->
    <string name="ID_ERROR">ID를 6~10자 사이로 해주세요</string>
    <string name="PW_ERROR">PW를 8~12자 사이로 해주세요</string>
    <string name="NICKNAME_ERROR">닉네임을 공백 제외 1자 이상 해주세요</string>
    <string name="MBTI_ERROR">MBTI는 영문 4개로 설정해주세요</string>
    <string name="ABOUT_ME_ERROR">자기소개를 공백 제외 1자 이상 해주세요</string>
    <string name="DEFAULT_ERROR">다시 시도해주세요</string>

    <string name="LOGIN_ID_ERROR">ID가 잘못되었습니다</string>
    <string name="LOGIN_PW_ERROR">PW가 잘못되었습니다</string>
    <string name="LOGIN_SIGN_UP_ERROR">회원가입된 정보가 없습니다</string>

    <!-- success_message -->
    <string name="LOGIN_SUCCESS">로그인 성공</string>

    <!-- bottom_navigation -->
    <string name="DO_SOPT">DO SOPT</string>
    <string name="HOME">HOME</string>
    <string name="MY_PAGE">MY PAGE</string>

    <!-- mypaget_fragment-->
    <string name="LOGOUT">Logout</string>
    <string name="LOGOUT_MESSAGE">정말로 로그아웃하시겠습니까?</string>
    <string name="LOGOUT_SUCCESS">로그아웃 성공</string>
    <string name="CANCEL">취소</string>
</resources>
