<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="signUpViewModel"
            type="org.sopt.dosopttemplate.presentation.signup.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:paddingVertical="60dp"
        tools:context=".presentation.login.LoginActivity">

        <TextView
            android:id="@+id/tv_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_signup_title"
            android:textSize="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_signup_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tv_signup_id_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_title" />

        <EditText
            android:id="@+id/etv_signup_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etv_signup_id"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={signUpViewModel.id}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_id_title" />

        <TextView
            android:id="@+id/tv_signup_pw_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_signup_pw_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_signup_id" />

        <EditText
            android:id="@+id/etv_signup_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etv_signup_pw"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:text="@={signUpViewModel.pw}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_pw_title" />

        <TextView
            android:id="@+id/tv_signup_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/tv_signup_nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etv_signup_pw" />

        <EditText
            android:id="@+id/etv_signup_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/etv_signup_nickname"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@={signUpViewModel.nickname}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_signup_nickname" />

        <Button
            android:id="@+id/btn_signup_navi_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup_navi_login"
            android:onClick="@{() -> signUpViewModel.clickSignupBtn()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
